change term idea

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -87,6 +87,6 @@
   "aService": "a service",
   "aJob": "a job",
   "aCV": "a CV",
-  "aIdea": "a Idea",
+  "aIdea": "an idea",
   "comingSoon": "New features are on the way - coming soon! ⏳"
 }
