change term calltoaction

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -9,7 +9,7 @@
   "chooseHere": "Choose here",
   "aProduct": "a product",
   "buySomething": "Buy something",
-  "callToAction": "SoCool generates disposable links with AI assistants, to help you sell anything you want. ❤️",
+  "callToAction": "SoCool generates disposable links with AI to automate the selling of anything. ❤️",
   "questionHelp": "What do you want me to sell?",
   "questionSell": "Which product do you want to sell?",
   "questionBuy": "Which product do you want to buy?",
