--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -9,7 +9,7 @@
   "chooseHere": "Chọn ở đây",
   "aProduct": "1 sản phẩm",
   "buySomething": "Mua một số thứ",
-  "callToAction": "SoCool tạo ra link dùng một lần với trợ lý AI, giúp bạn bán bất cứ thứ gì bạn muốn. ❤️",
+  "callToAction": "SoCool tạo ra các Link dùng một lần bằng AI để tự động hóa việc bán hàng. ❤️",
   "questionHelp": "Bạn cần tôi bán thứ gì?",
   "questionSell": "Bạn đang muốn bán sản phẩm nào?",
   "questionBuy": "Bạn đang muốn mua sản phẩm nào?",
