--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -91,5 +91,5 @@
   "comingSoon": "New features are on the way - coming soon! ⏳",
   "hereLinkAi": "Here is the link with an AI assistant helping you to sell your product:",
   "hereLinkDemo": "Here's the link to the product demo:",
-  "haveSpawnedLink": "✨ {{number}} links have been created in 10 minutes!"
+  "haveSpawnedLink": "✨ {{number}} links have been created!"
 }
