--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -91,5 +91,5 @@
   "comingSoon": "Các tính năng mới đang được hoàn thiện - sẽ sớm ra mắt! ⏳",
   "hereLinkAi": "Đây là link bán hàng có kèm trợ lí ảo (AI assistant) của bạn:",
   "hereLinkDemo": "Đây là link demo sản phẩm: ",
-  "haveSpawnedLink": "✨ {{number}} links have been created in 10 minutes!"
+  "haveSpawnedLink": "✨ {{number}} links have been created!"
 }
