--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -91,5 +91,16 @@
   "comingSoon": "New features are on the way - coming soon! ⏳",
   "hereLinkAi": "Here is the link with an AI assistant helping you to sell your product:",
   "hereLinkDemo": "Here's the link to the product demo:",
-  "haveSpawnedLink": "✨ {{number}} links have been created!"
+  "haveSpawnedLink": "✨ {{number}} links have been created!",
+  "placeholderArgument": "What argument are you trying to defend?",
+  "presentEvidence" : "Can you present evidence to support the above-stated argument?",
+  "yourArgument": "Your argument",
+  "yourEvidence": "Your evidence",
+  "firstSupportArgument": "The first question to support your argument.",
+  "secondSupportArgument": "The second question to strengthen your argument.",
+  "lastSupportArgument": "Here's the final question to reinforce your argument.",
+  "yourFirstQuestion": "Your first question",
+  "yourSecondQuestion": "Your second question",
+  "yourFinalQuestion": "Your final question",
+  "inputEmailAddressSellIdea": "A link with an AI assistant to sell your idea 😀"
 }
