--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -91,5 +91,16 @@
   "comingSoon": "Các tính năng mới đang được hoàn thiện - sẽ sớm ra mắt! ⏳",
   "hereLinkAi": "Đây là link bán hàng có kèm trợ lí ảo (AI assistant) của bạn:",
   "hereLinkDemo": "Đây là link demo sản phẩm: ",
-  "haveSpawnedLink": "✨ {{number}} links have been created!"
+  "haveSpawnedLink": "✨ {{number}} links have been created!",
+  "placeholderArgument": "What argument are you trying to defend?",
+  "presentEvidence" : "Can you present evidence to support the above-stated argument?",
+  "yourArgument": "Your argument",
+  "yourEvidence": "Your evidence",
+  "firstSupportArgument": "The first question to support your argument.",
+  "secondSupportArgument": "The second question to strengthen your argument.",
+  "lastSupportArgument": "Here's the final question to reinforce your argument.",
+  "yourFirstQuestion": "Your first question",
+  "yourSecondQuestion": "Your second question",
+  "yourFinalQuestion": "Your final question",
+  "inputEmailAddressSellIdea": "A link with an AI assistant to sell your idea 😀"
 }
