update onbording new comming soon

--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -91,5 +91,8 @@
   "comingSoon": "Các tính năng mới đang được hoàn thiện - sẽ sớm ra mắt! ⏳",
   "hereLinkAi": "Đây là link bán hàng có kèm trợ lí ảo (AI assistant) của bạn:",
   "hereLinkDemo": "Đây là link demo sản phẩm: ",
-  "haveSpawnedLink": "✨ {{number}} links have been created!"
+  "haveSpawnedLink": "✨ {{number}} links have been created!",
+  "sellSomething": "Sell something",
+  "necessary": "Could you please complete all the necessary information?",
+  "update16/8": "🌟 Thank you for being with us over the past month! 🚀 We are thrilled to announce that on August 16th, our upcoming update will introduce groundbreaking features, elevating your user experience to new heights. ✨ Get ready to explore exceptional improvements and unique utilities. 🎉 Don’t miss the chance to be among the first to experience this exciting new version and feel the difference! ❤️"
 }
