--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -10,7 +10,7 @@
   "aProduct": "a product",
   "buySomething": "Buy something",
   "callToAction": "SoCool generates disposable links with AI to automate the selling of anything. ❤️",
-  "questionHelp": "What do you want me to sell?",
+  "questionHelp": "What do you want me to help?",
   "questionSell": "Which product do you want to sell?",
   "questionBuy": "Which product do you want to buy?",
   "questionPrice": "Which price are you happy with?",
@@ -91,5 +91,8 @@
   "comingSoon": "New features are on the way - coming soon! ⏳",
   "hereLinkAi": "Here is the link with an AI assistant helping you to sell your product:",
   "hereLinkDemo": "Here's the link to the product demo:",
-  "haveSpawnedLink": "✨ {{number}} links have been created!"
+  "haveSpawnedLink": "✨ {{number}} links have been created!",
+  "sellSomething": "Sell something",
+  "necessary": "Could you please complete all the necessary information?",
+  "update16/8": "🌟 Thank you for being with us over the past month! 🚀 We are thrilled to announce that on August 16th, our upcoming update will introduce groundbreaking features, elevating your user experience to new heights. ✨ Get ready to explore exceptional improvements and unique utilities. 🎉 Don’t miss the chance to be among the first to experience this exciting new version and feel the difference! ❤️"
 }
