update onbording new comming soon v3

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -94,5 +94,5 @@
   "haveSpawnedLink": "✨ {{number}} links have been created!",
   "sellSomething": "Sell something",
   "necessary": "Could you please complete all the necessary information?",
-  "update16/8": "🌟 Thank you for being with us over the past month! 🚀 We are thrilled to announce that on August 16th, our upcoming update will introduce groundbreaking features, elevating your user experience to new heights. ✨ Get ready to explore exceptional improvements and unique utilities. 🎉 Don’t miss the chance to be among the first to experience this exciting new version and feel the difference! ❤️"
+  "update16/8": "🌟 Thank you for being with us over the past month! 🚀 We are thrilled to announce that on August 16th, our upcoming update will introduce groundbreaking features, elevating your user experience to new heights. ❤️"
 }
