--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -96,5 +96,7 @@
   "necessary": "Could you please complete all the necessary information?",
   "update16/8": "🌟 Thank you for being with us over the past month! 🚀 We are thrilled to announce that on August 16th, our upcoming update will introduce groundbreaking features, elevating your user experience to new heights. ❤️",
   "placeholderArea": "The city of Los Angeles",
-  "generateEmail": "Generate an email for me!"
+  "generateEmail": "Generate a smart email address for me",
+  "provideSmart": "We provide smart, fully automated emails to help you avoid scams and spam when sharing your contact information online. ❤️"
+
 }
