--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -10,7 +10,7 @@
   "aProduct": "a product",
   "buySomething": "Buy something",
   "callToAction": "SoCool generates disposable links with AI to automate the selling of anything. ❤️",
-  "questionHelp": "What do you want me to help?",
+  "questionHelp": "What do you want the email to do?",
   "questionSell": "Which product do you want to sell?",
   "questionBuy": "Which product do you want to buy?",
   "questionPrice": "Which price are you happy with?",
@@ -96,5 +96,6 @@
   "necessary": "Could you please complete all the necessary information?",
   "update16/8": "🌟 Thank you for being with us over the past month! 🚀 We are thrilled to announce that on August 16th, our upcoming update will introduce groundbreaking features, elevating your user experience to new heights. ❤️",
   "placeholderArea": "The city of Los Angeles",
-  "generateEmail": "Generate an email for me!"
+  "generateEmail": "Generate a smart email address for me",
+  "provideSmart": "We provide smart, fully automated emails to help you avoid scams and spam when sharing your contact information online. ❤️"
 }
