Update UI mail CV

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -89,7 +89,7 @@
   "aCV": "a CV",
   "aIdea": "an idea",
   "comingSoon": "New features are on the way - coming soon! ⏳",
-  "hereLinkAi": "Here is the email with an AI assistant helping you to sell your product:",
+  "hereLinkAi": "Here is the email with an AI assistant:",
   "hereLinkDemo": "Here's the link to the product demo:",
   "haveSpawnedLink": "✨ {{number}} emails have been created!",
   "sellSomething": "Sell something",
