--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -42,7 +42,7 @@
   "address": "Address",
   "delivery": "Delivery",
   "yourEmail": "Your email",
-  "alertCheckMail": "You have successfully created the email. Please check your inbox again",
+  "alertCheckMail": "This email will expire after Time {{time}}. Please use this email address to receive and collect CVs from all of your recruitment sources.",
   "time": "Time:",
   "404NotFound": "Sorry, the page you are looking for does not exist.",
   "goBackHome": "Go back to the home page",
@@ -89,7 +89,7 @@
   "aCV": "a CV",
   "aIdea": "an idea",
   "comingSoon": "New features are on the way - coming soon! ⏳",
-  "hereLinkAi": "Here is the email with an AI assistant:",
+  "hereLinkAi": "Here is your new smart email: ",
   "hereLinkDemo": "Here's the link to the product demo:",
   "haveSpawnedLink": "✨ {{number}} emails have been created!",
   "sellSomething": "Sell something",
@@ -97,5 +97,5 @@
   "update16/8": "🌟 Thank you for being with us over the past month! 🚀 We are thrilled to announce that on August 16th, our upcoming update will introduce groundbreaking features, elevating your user experience to new heights. ❤️",
   "placeholderArea": "The city of Los Angeles",
   "generateEmail": "Generate a smart email address for me",
-  "provideSmart": "We provide smart, fully automated emails to help you avoid scams and spam when sharing your contact information online. ❤️"
+  "provideSmart": "We provide smart, fully automated emails designed to boost your CV screening quality by 10x ⚡"
 }
