--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -99,6 +99,6 @@
   "generateEmail": "Generate a smart email address for me",
   "provideSmart": "We provide smart, fully automated emails designed to boost your ",
   "screeningCV": "CV screening quality by 10x ⚡",
-  "anyStandard": "Any standard that has a score of 0 in the Matrix will not be used to screen candidates' CVs. ⚠️",
+  "anyStandard": "Any standard that has a score of 0 in the Matrix will not be used to screen candidates' CVs ⚠️⚠️⚠️",
   "youSure": "Are you sure about your selection?"
 }
