--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -42,7 +42,8 @@
   "address": "Address",
   "delivery": "Delivery",
   "yourEmail": "Your email",
-  "alertCheckMail": "This email will expire after Time {{time}}. Please use this email address to receive and collect CVs from all of your recruitment sources.",
+  "alertCheckMail": "This email will expire after {{time}}.",
+  "useEmail": " Please use this email address to receive and collect CVs from all of your recruitment sources.",
   "time": "Time:",
   "404NotFound": "Sorry, the page you are looking for does not exist.",
   "goBackHome": "Go back to the home page",
@@ -89,7 +90,7 @@
   "aCV": "a CV",
   "aIdea": "an idea",
   "comingSoon": "New features are on the way - coming soon! ⏳",
-  "hereLinkAi": "Here is your new smart email: ",
+  "hereLinkAi": "Here is your smart email: ",
   "hereLinkDemo": "Here's the link to the product demo:",
   "haveSpawnedLink": "✨ {{number}} emails have been created!",
   "sellSomething": "Sell something",
