--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -98,7 +98,7 @@
   "update16/8": "🌟 Thank you for being with us over the past month! 🚀 We are thrilled to announce that on August 16th, our upcoming update will introduce groundbreaking features, elevating your user experience to new heights. ❤️",
   "placeholderArea": "The city of Los Angeles",
   "generateEmail": "Generate a smart email address for me",
-  "provideSmart": "We help you create a smart email that quickly filters, screens,",
+  "provideSmart": "We help you create a smart email address that quickly filters, screens,",
   "screeningCV": "and ranks Resumes (CVs) to find top candidates 10 times faster ⚡",
   "anyStandard": "Any standard that has a score of 0 in the Matrix will not be used to screen candidates' CVs ⚠️⚠️⚠️",
   "youSure": "Are you sure about your selection?"
